<resources>
    <string name="app_name">FunApp</string>
    <string name="title_inicio">Inicio</string>
    <string name="title_notificaciones">Avisos</string>
    <string name="title_explorar">Explorar</string>
    <string name="title_suscripciones">Suscritos</string>
    <string name="title_mapa">Mapa</string>
    <string name="todo">TODO</string>
    <string name="title_activity_login">Iniciar Sesión</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrase">Registrarse</string>
    <string name="crear_editar_evento">Crear evento</string>
    <string name="evento_seleccionado">Evento seleccionado</string>
    <string name="usuario_seleccionado">Usuario seleccionado</string>
    <string name="welcome">"Welcome !"</string>
    <string name="descripcion">"Descripción"</string>
    <string name="titulo">"Título"</string>
    <string name="more_info">"Más info"</string>

    <string name="invalid_username">El nombre debe contener al menos 5 caracteres</string>
    <string name="invalid_email">El correo no es correcto</string>
    <string name="invalid_password">La contraseña debe contener más de 5 caracteres</string>
    <string name="invalid_confirm_password">La contraseña no coincide</string>
    <string name="invalid_birthday">Debes ser mayor de edad</string>
    <string name="login_failed">"Error en el login"</string>
    <string name="registrarse_failed">"Error al registrarse"</string>
    <string name="titulo_pickers">Obtener fecha y hora</string>
    <string name="hint_Fechanacimiento">Fecha de nacimiento</string>
    <string name="fecha_evento">Fecha del evento</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="hora_inicio">Hora inicio</string>
    <string name="hora_fin">Hora fin</string>

    <string name="codigo_qr">Mi código QR</string>
    <string name="amigos">Amigos</string>
    <string name="historial">Historial de eventos</string>
    <string name="cuenta">Mi cuenta</string>
    <string name="mis_eventos">Mis eventos</string>
    <string name="cerrar_sesion">Cerrar sesión</string>

    <string name="usuario">Nombre usuario</string>
    <string name="entidad">Entidad</string>
    <string name="eventos_activos">Eventos activos</string>
    <string name="eventos_suspendidos">Eventos suspendidos</string>
    <string name="eventos_asistidos">Eventos asistidos</string>
    <string name="eventos_organizados">Eventos organizados</string>
    <string name="seleccione_tematica">Seleccione una temática</string>
    <string name="explorar">Explorar</string>
    <string name="suscritos">Eventos suscritos</string>
    <string name="proximos_eventos">Próximos eventos</string>
    <string name="recomendados">Recomendados</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="valoraciones">Valoraciones</string>

    <string name="google_maps_apikey">AIzaSyDqnIJCY1o-m9kmGjKYJ4H1z28UBPjvoUk</string>

</resources>
