<?xml version="1.0" encoding="utf-8"?>

<!-- Este particular layout se utiliza cuando hacemos intent a la app GoogleMap, la cual marcará
en el sañalizador de las coordenadas información detallada -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/window_info_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/window_info_title"
        android:layout_marginStart="16dp"

        android:layout_marginLeft="16dp"
        android:text="@string/descripcion"
        android:textColor="@color/color1"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/icon_info"
        app:layout_constraintTop_toBottomOf="@+id/window_info_title" />

    <TextView
        android:id="@+id/window_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/titulo"
        android:textColor="@color/color1"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/icon_info"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@id/window_info_desc"
        android:layout_gravity="center"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginRight="48dp"
        android:background="@android:color/transparent"
        android:text="@string/more_info"
        android:textColor="@color/color3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/icon_info"
        app:layout_constraintTop_toBottomOf="@+id/window_info_desc" />

    <ImageView
        android:id="@+id/icon_info"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:src="@android:drawable/ic_dialog_info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/window_info_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>