<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".ui.miseventos.crear_editar_evento.CrearEditarEventoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/et_CrearEventoHoraFin"
            android:layout_width="106dp"
            android:layout_height="42dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hora_fin"
            android:inputType="time"
            app:layout_constraintStart_toEndOf="@+id/ib_obtener_horaInicio"
            app:layout_constraintTop_toBottomOf="@+id/etCrearEventoFecha" />

        <ImageButton
            android:id="@+id/ib_obtener_horaFin"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="45dp"
            android:layout_marginRight="45dp"
            android:background="@color/color2"
            android:src="@android:drawable/ic_menu_recent_history"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_CrearEventoHoraFin"
            app:layout_constraintTop_toBottomOf="@+id/etCrearEventoFecha"
            tools:ignore="ContentDescription" />

        <View
            android:id="@+id/viewCuenta1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:background="@color/color3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCrearEvento" />

        <EditText
            android:id="@+id/etCrearEventoNombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:hint="Nombre del evento"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewCuenta1" />

        <EditText
            android:id="@+id/etCrearDescripcion"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="Descripción"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCrearEventoNombre" />

        <TextView
            android:id="@+id/tvCrearEvento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="Crear/Editar evento"
            android:textColor="@color/color1"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/bConfirmarCrear"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/color2"
            android:text="Confirmar"
            android:textColor="@color/color4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvCrearEvento"
            app:layout_constraintTop_toTopOf="parent" />


        <EditText
            android:id="@+id/etCrearEventoFecha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/fecha_evento"
            android:inputType="date"
            app:layout_constraintEnd_toStartOf="@+id/ib_obtener_fecha"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCrearDescripcion" />

        <EditText
            android:id="@+id/et_crearEventoHoraInicio"
            android:layout_width="106dp"
            android:layout_height="42dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/hora_inicio"
            android:inputType="time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCrearEventoFecha" />

        <ImageButton
            android:id="@+id/ib_obtener_fecha"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="149dp"
            android:layout_marginRight="149dp"
            android:background="@color/color2"
            android:src="@mipmap/baseline_event_white_36dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etCrearEventoFecha"
            app:layout_constraintTop_toBottomOf="@+id/etCrearDescripcion"
            tools:ignore="ContentDescription" />

        <ImageButton
            android:id="@+id/ib_obtener_horaInicio"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="8dp"
            android:background="@color/color2"
            android:src="@android:drawable/ic_menu_recent_history"
            app:layout_constraintStart_toEndOf="@+id/et_crearEventoHoraInicio"
            app:layout_constraintTop_toBottomOf="@+id/etCrearEventoFecha"
            tools:ignore="ContentDescription" />

        <Spinner
            android:id="@+id/spinnerTematicas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:prompt="@string/seleccione_tematica"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTematicaCrearEvento" />

        <Switch
            android:id="@+id/swCrearEventoCodigoQR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="Código QR"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ib_obtener_fecha"
            app:layout_constraintTop_toBottomOf="@+id/etCrearDescripcion" />

        <TextView
            android:id="@+id/tvTematicaCrearEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:text="Seleccione una temática"
            android:textColor="@color/color1"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_crearEventoHoraInicio" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>